--- a/config.yaml
+++ b/config.yaml
@@ -22,7 +22,23 @@ sequence:
     - name: Intro to the Internet and Servers
       pursuit_path: intro-to-internet-and-servers
       kind: lesson
-      activity: ~
+      activity: canvas_text
+      activity_description: "<p>Watch the Following Videos</p>
+      <ol>
+      <li><a href='https://www.khanacademy.org/computing/ap-computer-science-principles/the-internet/introducing-the-internet/v/what-is-the-internet?modal=1'>What is the Internet? </a></li>
+      <li><a href='https://www.youtube.com/watch?v=7_LPdttKXPc'>How the Internet Works in 5 Minutes </a></li>
+      </ol>
+      <p>Write an algorithm that achieves the following outcome: looking up a word in an online or physical dictionary. Keep in mind any inputs a person may need and the desired output. Additionally, focus on designing for the default scenario (i.e. 'happy path') before thinking about edge cases. If there are any edge cases you think are important to keep in mind, include them at the end.</p>
+      <ul>
+      <li>What is the internet made up of?</li>
+      <li>Why is the internet useful?</li>
+      <li>Is the laptop you are using a server? Why or why not?</li>
+      <li>What is the difference between a client and a server?</li>
+      <li>What is the purpose of a database?</li>
+      <li>What components of an HTTP request are required? Which are optional?</li>
+      <li>What components of an HTTP response are required? Which are optional?</li>
+      </ul>
+      <p>Do not spend more than 30 - 45 minutes on this Lab.</p>"
     - name: Introduction to Express Response
       pursuit_path: intro-to-express-response
       kind: lesson
