--- a/config.yaml
+++ b/config.yaml
@@ -145,7 +145,7 @@ sequence:
       kind: lesson
       activity: repository
     - name: Single Resource Pair Project
-      pursuit_path: snack-a-log
+      pursuit_path: single-resource
       kind: project
       activity: repository
       points_possible: 100
