--- a/config.yaml
+++ b/config.yaml
@@ -149,9 +149,9 @@ sequence:
       kind: project
       activity: repository
       points_possible: 80
-    - name: Single Resource Pair Project
-      pursuit_path: single-resource
-      kind: task
+    - name: Single Resource Pair Project Presentation
+      pursuit_path: single-resource-presentation
+      kind: project
       points_possible: 20
     - name: Full-Stack Portfolio Project
       pursuit_path: full-stack-portfolio
