--- a/config.yaml
+++ b/config.yaml
@@ -8,11 +8,6 @@ sequence:
       elements:
         - kind: deck
         - kind: recording
-    #     - name: Bootstrap CSS
-    #       pursuit_path: bootstrap-css
-    #       kind: lesson
-    #       activity: ~
-    #       starter: bootstrap-css
     - name: Install PostgreSQL
       elements:
         - kind: guide
@@ -23,22 +18,23 @@ sequence:
       pursuit_path: intro-to-internet-and-servers
       kind: lesson
       activity: canvas_text
-      activity_description: "<h2>Watch the Following Videos</h2>
+      activity_description: |
+        <h2>Watch the Following Videos</h2>
         <p>Watch the following videos. Then, write a paragraph or two that answers the questions below the video.</p>
         <ol>
-        <li><a href='https://www.khanacademy.org/computing/ap-computer-science-principles/the-internet/introducing-the-internet/v/what-is-the-internet?modal=1'>What is the Internet? </a></li>
-        <li><a href='https://www.youtube.com/watch?v=7_LPdttKXPc'>How the Internet Works in 5 Minutes </a></li>
+          <li><a href='https://www.khanacademy.org/computing/ap-computer-science-principles/the-internet/introducing-the-internet/v/what-is-the-internet?modal=1'>What is the Internet? </a></li>
+          <li><a href='https://www.youtube.com/watch?v=7_LPdttKXPc'>How the Internet Works in 5 Minutes </a></li>
         </ol>
         <ul>
-        <li>What is the internet made up of?</li>
-        <li>Why is the internet useful?</li>
-        <li>Is the laptop you are using a server? Why or why not?</li>
-        <li>What is the difference between a client and a server?</li>
-        <li>What is the purpose of a database?</li>
-        <li>What components of an HTTP request are required? Which are optional?</li>
-        <li>What components of an HTTP response are required? Which are optional?</li>
+          <li>What is the internet made up of?</li>
+          <li>Why is the internet useful?</li>
+          <li>Is the laptop you are using a server? Why or why not?</li>
+          <li>What is the difference between a client and a server?</li>
+          <li>What is the purpose of a database?</li>
+          <li>What components of an HTTP request are required? Which are optional?</li>
+          <li>What components of an HTTP response are required? Which are optional?</li>
         </ul>
-        <p>Do not spend more than 30 - 45 minutes on this Lab.</p>"
+        <p>Do not spend more than 30 - 45 minutes on this Lab.</p>
     - name: Introduction to Express Response
       pursuit_path: intro-to-express-response
       kind: lesson
